--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -136,7 +136,7 @@
     <entry name="SpaceMarines/KillTeamEliminatorsFlavor" value="<string name='Units/SpaceMarines/KillTeamEliminatorsFlavor'/>" />
     <entry name="SpaceMarines/MeltaBombDescription" value="Grants Assault Space Marines, Kill Team Eliminators and Scout Bikers the ability to deploy a melta bomb that is highly effective against heavy vehicles and fortifications." />
     <entry name="SpaceMarines/OmniscopeDescription" value="Grants Scouts, Devastator Space Marines, Predators, Terminators and Devastator Centurions the ability to bypass ranged damaged reduction." />
-    <entry name="SpaceMarines/PredatorLascannonDescription" value="Grants Fortresses of Redemption Twin-Linked Lascannon. Grants Predators, Vindicators and Aquila Macro-Cannons extra Heavy Bolters." />
+    <entry name="SpaceMarines/PredatorLascannonDescription" value="Grants Predators ability to install extra Heavy Bolters or improve lascannon damage, armour penetration and accuracy. Grants Fortresses of Redemption twin-linked Lascannon. Grants Aquila Macro-Cannons extra Heavy Bolters." />
     <entry name="SpaceMarines/ScoutBiker" value="<string name='Units/SpaceMarines/ScoutBiker'/>" />
     <entry name="SpaceMarines/ScoutBikerDescription" value="<string name='Units/SpaceMarines/ScoutBikerDescription'/>" />
     <entry name="SpaceMarines/ScoutBikerFlavor" value="<string name='Units/SpaceMarines/ScoutBikerFlavor'/>" />
