--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -36,6 +36,7 @@
     <entry name="AstraMilitarum/ReconOperators" value="Recon Operators" />
     <entry name="AstraMilitarum/ReconOperatorsDescription" value="Grants Scout Sentinels and Tempestus Scions ability to reveal nearby tiles." />
     <entry name="AstraMilitarum/ReconOperatorsFlavor" value="Adept infiltrators or swift vanguard skirmishers, this regiment’s infantry range ahead of the front lines alongside swifter elements, tackling the enemy without warning and reporting observations to Imperial command." />
+    <entry name="AstraMilitarum/RecoveryGearDescription" value="Increases the healing rate of vehicle near Tech-Priest Enginseers. Increases Tech-Priest Enginseer's blessing of the omnissiah healing effect."/>
     <entry name="AstraMilitarum/RelicPlatingDescription" value="Increases the witchfire damage reduction of ground vehicles. Increases Imperial Bastions' the city damage reduction. Increases Leman Russ Battle Tanks and Baneblades armour." />
     <entry name="AstraMilitarum/SmokeLauncher" value="Smoke Launcher / Dozer Blade" />
     <entry name="AstraMilitarum/SmokeLauncherDescription" value="Grants ground vehicles the ability to launch a smoke screen that increases the ranged damage reduction. Reduces the movement penalty for tanks in forests and imperial ruins." />
